Fixed spacing issue with careers page

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -410,7 +410,6 @@ a {
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
-          justify-content: center;
 }
 
 /* media queries */
